<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.AddItemActivity">


    <EditText
        android:id="@+id/editText_url"
        android:hint="@string/item_url_text"
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editText_name"
        android:hint="@string/item_name_text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_url"
        />


    <ProgressBar
        android:id="@+id/progressBar_add_item"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>