<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_save"
        android:title="@string/item_save_text"
        android:icon="@drawable/ic_save_white"
        app:showAsAction="ifRoom"
        />
</menu>